# YouTube-Playlist-Downloader

./: .bandit  .env.example  .gitignore  BUG_FIX_SUMMARY.md  CONTRIBUTING.md  FEATURE_OPTIONS.md  FILE_ORGANIZER_FEATURE.md  HP  New_File_For_Testing  OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  RW2.R  SECURITY.md  SECURITY_CHECKLIST.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_RECOMMENDATIONS.md  TESTING.md  TEST_RESULTS.md  added_function1.py  added_single.py  benchmark_youtube_downloader.py  bug_demonstration.py  build.sh  calculator.py  file-v1-main.py  file-vertex-claude-v4-sonnet-6d260-main.py  introduction.html  introduction.md  main.py  micro_benchmark.py  pyproject.toml  quick_test.py  readme.txt  script.js  simple_benchmark.py  simple_downloader_gui.py  test_added_function1_annotations.py  test_added_single.py  test_bottleneck.py  (+27 more)
.github/workflows/: security.yml
llm_benchmark/algorithms/: primes.py  sort.py
llm_benchmark/control/: double.py  single.py
llm_benchmark/datastructures/: dslist.py
llm_benchmark/generator/: gen_list.py
llm_benchmark/sql/: query.py
llm_benchmark/strings/: strops.py
scripts/: security-check.sh
tests/: test_added_function1.py  test_secrets_loading.py  test_secrets_masking.py  test_send_message.py
utils/: secrets.py
