[tool.poetry]
name = "llm-utils-and-demos"
version = "0.1.0"
description = "A small toolkit of Python utilities including a YouTube downloader (CLI/GUI) and a Taipy-based chat demo."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.cli]
optional = true

[tool.poetry.group.cli.dependencies]
yt-dlp = "==2024.08.06"

[tool.poetry.group.gui]
optional = true

[tool.poetry.group.gui.dependencies]
customtkinter = "==5.2.2"

[tool.poetry.group.chat]
optional = true

[tool.poetry.group.chat.dependencies]
taipy = "==3.1.1"
openai = "==1.51.0"
python-dotenv = "==1.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "==0.6.7"
black = "==24.8.0"
isort = "==5.13.2"
bandit = "==1.7.10"
pre-commit = "==3.8.0"
detect-secrets = "==1.5.0"
pip-audit = "==2.7.3"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# Notes:
# - Use: `poetry env use 3.11` then `poetry lock` and `poetry install --with cli,gui,chat,dev` as needed.
# - Groups are optional and can be included via `--with <group>`.
